--- a/full_estils.css
+++ b/full_estils.css
@@ -287,8 +287,8 @@ svg {
     box-shadow: 0 8px 16px rgba(0,0,0,0.1);
 }
 
-/* Definició del botó que permet elegir el tipus de vehicle */
-#toggleButtonVehicle {
+/* Definició del botó que permet elegir el tipus de vehicle i el que permet elegir la causa del vianant */
+#toggleButtonVehicle, #toggleButtonCause, #toggleButtonPersona, #toggleButtonVictimitzacio, #toggleButtonSexe, #toggleButtonDiaSetmana, #toggleButtonTornDia, #toggleButtonBarri {
     width: 100%;
     padding: 10px;
     background-color: rgba(24, 24, 24, 1.0);
@@ -303,11 +303,11 @@ svg {
     transition: background-color 0.3s ease;
 }
 
-#toggleButtonVehicle:hover {
+#toggleButtonVehicle:hover, #toggleButtonCause:hover, #toggleButtonPersona:hover, #toggleButtonVictimitzacio:hover, #toggleButtonSexe:hover, #toggleButtonDiaSetmana:hover, #toggleButtonTornDia:hover, #toggleButtonBarri:hover {
     background-color: rgba(43, 43, 43, 1.0);
 }
 
-#toggleButtonVehicle:active {
+#toggleButtonVehicle:active, #toggleButtonCause:active, #toggleButtonPersona:active, #toggleButtonVictimitzacio:active, #toggleButtonSexe:active, #toggleButtonDiaSetmana:active, #toggleButtonTornDia:active, #toggleButtonBarri:active {
     background-color: rgba(43, 43, 43, 1.0);
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
 }
